--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
 #   数据源基本配置
     username: root
-    password: 123456
+    password: admin
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://10.56.37.57:3306/mybatis
+    url: jdbc:mysql://localhost:3306/mybatis
     type: com.alibaba.druid.pool.DruidDataSource
 #   数据源其他配置
     initialSize: 5
